feat: Railway deployment config
- application-prod.properties: PostgreSQL via PGHOST/PGPORT/PGDATABASE env vars
- application.properties: env var overrides with fallbacks for dev
- SecurityConfig: CORS origins from CORS_ORIGINS env var
- api.js: VITE_API_URL support for production
- railway.json: build/start config for both frontend and backend services
- backend/railway.json: Spring Boot with prod profile activation